welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: Invalid literal number
        for (i<-1to s ){
                ^Methods:2: error: Missing closing brace `}' assumed here
def goAndGet() {
^Methods:4: error: ')' expected but '<-' found.
      fot(j<-1 to 7 ){
           ^